<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.ourdreamit.blooddonationproject.ui.activities.MainActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            android:background="@drawable/login_girl_old"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About Us"
                    style="@style/ButtonText"
                    android:background="@color/two"
                    android:padding="5dp"
                    android:gravity="left" />
                <TextView
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us" />
                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mission"
                    style="@style/ButtonText"
                    android:background="@color/two"
                    android:padding="5dp"
                    android:gravity="left" />

                <TextView
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mission" />
                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Vision"
                    style="@style/ButtonText"
                    android:background="@color/two"
                    android:padding="5dp"
                    android:gravity="left" />

                <TextView
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vision" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        android:onClick="lifecycle_web"
                        android:src="@drawable/web" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        android:onClick="lifecycle_facebook"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        android:onClick="lifecycle_tweeter"
                        android:src="@drawable/tweeter" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        android:onClick="lifecycle_in"
                        android:src="@drawable/in" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:onClick="lifecycle_mail"
                        android:src="@drawable/mail" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <fragment
        android:id="@+id/fragment_drawer"
        android:name="com.ourdreamit.blooddonationproject.ui.fragments.NavigationDrawerFragment"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>
